[tool.poetry]
name = "ocpp_asgi"
version = "0.1.0"
description = "ocpp-asgi extends ocpp library to provide ASGI compliant interface."
authors = ["Ville Kärkkäinen <ville.karkkainen@etteplan.com>"]

[tool.poetry.dependencies]
python = "3.8.1"
ocpp = "^0.8.1"

[tool.poetry.dev-dependencies]
websockets = "^8.1"
uvicorn = "^0.13.4"
black = "^20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
