[tool.poetry]
name = "ocpp_asgi"
version = "0.3.0"
description = "ocpp-asgi provides ASGI compliant interface for implementing event-driven server-side support for OCPP protocol with Python"
authors = ["Ville Kärkkäinen <ville.karkkainen@outlook.com>"]
readme = "README.md"
homepage = "https://github.com/villekr/ocpp-asgi"
license = "MIT"
include = [
    "LICENSE",
]
keywords = ["ocpp", "asgi", "serverless"]

[tool.poetry.dependencies]
python = "^3.8"
ocpp = "^0.15.0"

[tool.poetry.dev-dependencies]
websockets = "10.3"
aiohttp = "3.8.3"
uvicorn = "0.18.3"
black = "22.8.0"
flake8 = "5.0.4"
isort = "5.10.1"
pytest = "7.1.3"
pytest-cov = "3.0.0"
pytest-asyncio = "0.19.0"
asgi-tools = "0.64.1"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
